# teleop-simulator

./: .gitignore  CMakeLists.txt  README.md  launch.bat  launch.sh  teleop_checklist.md  vcpkg.json
.cache/clangd/index/: arm_control.cpp.6573EC87ABF7B752.idx  arm_control.hpp.F3FD094E687F3985.idx  avatar.cpp.B488EEB19879410D.idx  avatar.hpp.BD16CE9811EE7B76.idx  common.hpp.59C310ABED06EB9F.idx  gripper.cpp.9CBA8CD9FAA8C15B.idx  gripper.hpp.E846D96A94258A84.idx  head_control.cpp.11DFEFFD65081FA1.idx  head_control.hpp.19352A8FD9AB056E.idx  interpolator.cpp.AEE2E03124261551.idx  interpolator.hpp.650113B6413CF50B.idx  main.cpp.D1B6F11D3A8E9EC8.idx  model.cpp.D93BC4F8D1E27A73.idx  model.hpp.48FFA35E68EEC7BC.idx  robot.cpp.1600609B8E7BA0F4.idx  robot.hpp.E334E246EA7AC5C0.idx  scene_builder.cpp.F347F4509D6AD430.idx  scene_builder.hpp.C8BF7B5420AC54F7.idx  simulation.cpp.CE6274B37592122B.idx  simulation.hpp.8167C02C670338F8.idx  transmission.cpp.B59EF5C6D88156A0.idx  transmission.hpp.FDCB5FD9F8CD5A01.idx  tum_head_driver.cpp.1C7E08D05BC74257.idx  tum_head_driver.hpp.C2DFB575C109B372.idx
analysis/notebooks/: inspect_episode.ipynb  read_logging.ipynb
analysis/utils/: common.py
cmake/: options.cmake
config/: config.yaml  robot_config.yaml  robot_config_local.yaml  sim_config.yaml  streamer_config.yaml
include/: arm_control.hpp  arm_recovery.hpp  avatar.hpp  common.hpp  data_logger.hpp  head_control.hpp  interpolator.hpp  self_collision_protection.hpp  transmission.hpp  win_preamble.hpp
include/intention/: annotation_msg.hpp  intention_buffer.hpp  intention_recognizer.hpp  intention_sample.hpp
include/network/: platform_socket.hpp  udp_reliable.hpp  udp_stream.hpp  udp_transport.hpp
include/sim_env/: gripper.hpp  model.hpp  robot.hpp  scene_builder.hpp  simulation.hpp  tum_head_driver.hpp
include/streamer/: camera_source.hpp  realsense_source.hpp  shared_memory.hpp  stream_feedback.hpp  stream_quality_controller.hpp  video_streamer.hpp
models/mujoco/props/: box_blue.xml  box_green.xml  box_red.xml  table.xml  target_frame.xml  wall.xml
models/mujoco/robots/franka_fr3/: fr3_torque.xml  hand.xml
models/mujoco/robots/franka_panda/: panda_nohand_position.xml  panda_nohand_torque.xml  panda_position.xml  panda_torque.xml
models/mujoco/robots/pan_tilt_dummy/: pan_tilt_dummy.xml
models/mujoco/scenes/: world_scene.xml
models/urdf/franka_fr3/: fr3_franka_hand.urdf  fr3_franka_hand_old.urdf  panda.urdf
scripts/: receiver_string.txt  test_transmission.py
src/: arm_control.cpp  avatar.cpp  head_control.cpp  interpolator.cpp  main.cpp  transmission.cpp
src/intention/: intention_buffer.cpp  intention_recognizer.cpp
src/network/: udp_reliable.cpp  udp_transport.cpp
src/sim_env/: gripper.cpp  model.cpp  robot.cpp  scene_builder.cpp  simulation.cpp  tum_head_driver.cpp
src/streamer/: camera_source.cpp  realsense_source.cpp  stream_quality_controller.cpp  streamer_main.cpp  video_streamer.cpp
tests/: arm_tester.py  episode_config_server.py  plot_intention.py  test_stream_quality.py  test_transmission.py
